fixd h3 alignment in mobile

--- a/index.css
+++ b/index.css
@@ -36,10 +36,15 @@ body {
 h1 {
   color: #FCFFF5;
   font-weight: 900;
-  font-size: 6em;
+  font-size: 4em;
   letter-spacing: 1px;
-  line-height: 1em;
+  line-height: 1.5em;
   font-family: "Charmonman", serif;
+  margin-top: 15px;
+}
+
+header h2 {
+  font-size: 1em;
 }
 
 h2 {
@@ -140,6 +145,10 @@ a:hover {
   padding: 10px;
 }
 
+.participation h3, .requirements h3 {
+  padding-left: 15px;
+}
+
 @keyframes Animation {
   0% {
     background-position: 50% 100%;
@@ -233,6 +242,11 @@ footer {
 
     h1 {
       margin-top: 60px;
+      font-size: 6em;
+    }
+
+    header h2 {
+      font-size: 1.5em;
     }
 
     h2 {
